<?xml version="1.0"?>
<package format="2">
  <name>panda_controller</name>
  <version>0.0.0</version>
  <description>The panda_controller package</description>

  <maintainer email="harco@todo.todo">harco</maintainer>



  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>kdl_parser</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <build_export_depend>gazebo_msgs</build_export_depend>
  <build_export_depend>pinocchio</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>pinocchio</exec_depend>

  <export>


  </export>
</package>
